--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
+    "google-tts-api": "^2.0.2",
     "handlebars": "^4.7.7",
     "mysql2": "^2.3.3",
     "sequelize": "^6.24.0"
